fix: npm audit fix

--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@ansyn/event-drops": "0.2.81.7",
+    "@ansyn/event-drops": "0.2.8-1.7",
     "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.0.1",
@@ -89,6 +89,7 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "4.14.88",
     "@types/node": "~8.9.4",
+    "@types/openlayers": "^4.6.13",
     "@types/rison": "0.0.6",
     "@types/wellknown": "0.5.0",
     "codelyzer": "~4.2.1",
