--- a/src/app/@ansyn/overlays/package.json
+++ b/src/app/@ansyn/overlays/package.json
@@ -12,7 +12,7 @@
 		"@ngrx/effects": "^6.0.1",
 		"@turf/turf": "5.1.6",
 		"lodash": "4.17.5",
-		"@ansyn/event-drops": "0.2.81.7",
+		"@ansyn/event-drops": "0.2.8-1.7",
 		"@ngx-translate/core": "^10.0.2",
 		"auto-subscriptions": "^1.0.3",
 		"d3": "^4.13.0"
