--- a/package.json
+++ b/package.json
@@ -76,7 +76,7 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.11.1",
     "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular/cli": "~6.0.8",
     "@angular/compiler-cli": "^6.0.3",
@@ -89,12 +89,11 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/lodash": "4.14.88",
     "@types/node": "~8.9.4",
-    "@types/openlayers": "^4.6.13",
     "@types/rison": "0.0.6",
     "@types/wellknown": "0.5.0",
     "codelyzer": "~4.2.1",
     "find-in-files": "0.4.0",
-    "gulp": "^3.9.1",
+    "gulp": "^4.0.0",
     "gulp-concat": "^2.6.1",
     "gulp-git": "^2.5.2",
     "gulp-inline-ng2-template": "^4.0.0",
@@ -111,16 +110,16 @@
     "jasmine-marbles": "0.3.1",
     "jasmine-spec-reporter": "~4.2.1",
     "jsdoc": "3.5.5",
-    "karma": "~1.7.1",
+    "karma": "^3.1.3",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
     "ng-packagr": "^3.0.0-rc.2",
     "pre-commit": "1.2.2",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.1",
     "protractor-screenshoter-plugin": "^0.5.0",
-    "replace": "0.3.0",
+    "replace": "^1.0.0",
     "ts-node": "~5.0.1",
     "tsickle": ">=0.25.5",
     "tslib": "^1.7.1",
