--- a/.travis.yml
+++ b/.travis.yml
@@ -45,12 +45,12 @@ before_deploy:
 
 deploy:
   - provider: script
-    script: sh -x scripts/deploy.sh $REPO_DEV $TRAVIS_COMMIT $SERVICES_DEV
+    script: sh -x scripts/deploy.sh $REPO_DEV $TRAVIS_COMMIT $CLUSTER $SERVICES_DEV
     skip_cleanup: true
     on:
       branch: master
   - provider: script
-    script: sh -x scripts/deploy.sh $REPO_PROD $TRAVIS_TAG $SERVICES_PROD
+    script: sh -x scripts/deploy.sh $REPO_PROD $TRAVIS_TAG $CLUSTER $SERVICES_PROD
     skip_cleanup: true
     on:
       tags: true
