--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -8,7 +8,7 @@ keys = [
     "/ansyn/overlay/api/default",
     "/ansyn/login/baseurl",
     "/ansyn/login/active",
-	"/ansyn/menu/items",
+    "/ansyn/menu/items",
     "/ansyn/menu/background",
     "/ansyn/menu/color",
     "/ansyn/menu/mode",
@@ -20,5 +20,5 @@ keys = [
 	"/ansyn/overlay/idaho/inactive",
 	"/ansyn/imisight/callback/url",
 	"/ansyn/overlay/imisight/inactive",
-	"/ansyn/overlay/tb/inactive",
+	"/ansyn/overlay/tb/inactive"
 ]
