--- a/package.json
+++ b/package.json
@@ -67,7 +67,8 @@
     "ngx-treeview": "^2.0.6",
     "ol": "4.6.3",
     "primeng": "^6.1.4",
-    "proj4": "2.4.3",
+    "proj4": "^2.5.0",
+    "gl-matrix": "^2.8.1",
     "rison": "0.1.1",
     "rxjs": "^6.2.1",
     "togeojson": "^0.16.0",
