--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
+    "@angular/cdk": "^6.4.1",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
+    "@angular/material": "^6.4.1",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
