--- a/package.json
+++ b/package.json
@@ -40,7 +40,7 @@
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
     "@angular/router": "^6.0.3",
-    "@ansyn/event-drops": "0.2.81.7",
+    "@ansyn/event-drops": "0.2.8-1.7",
     "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^6.0.1",
@@ -77,14 +77,10 @@
     "zone.js": "^0.8.26"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
+    "@angular-devkit/build-angular": "^0.11.4",
     "@angular-devkit/build-ng-packagr": "~0.6.8",
-    "@angular-devkit/build-angular": "~0.6.8",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
     "@angular/cli": "~6.0.8",
+    "@angular/compiler-cli": "^6.0.3",
     "@angular/language-service": "^6.0.3",
     "@types/auth0-js": "^8.11.5",
     "@types/d3": "^4.13.0",
@@ -122,12 +118,16 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^3.0.0-rc.2",
     "pre-commit": "1.2.2",
-    "protractor": "~5.3.0",
+    "protractor": "^5.4.2",
     "protractor-screenshoter-plugin": "^0.5.0",
     "replace": "0.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": ">=0.25.5",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "~2.7.2"
   },
   "precommit": [
     "fix-all"
