--- a/src/app/@ansyn/assets/package.json
+++ b/src/app/@ansyn/assets/package.json
@@ -3,7 +3,7 @@
 	"version": "0.2.85",
 	"license": "MIT",
 	"dependencies": {
-		"@ansyn/event-drops": "0.2.81.7",
+		"@ansyn/event-drops": "0.2.8-1.7",
 		"ol": "4.6.3",
 		"primeng": "^6.1.4",
 		"flatpickr": "4.1.2",
