--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "@angular/animations": "^6.0.3",
     "@angular/common": "^6.0.3",
     "@angular/compiler": "^6.0.3",
+    "@angular/cdk": "^6.4.1",
     "@angular/core": "^6.0.3",
     "@angular/forms": "^6.0.3",
+    "@angular/material": "^6.4.1",
     "@angular/http": "^6.0.3",
     "@angular/platform-browser": "^6.0.3",
     "@angular/platform-browser-dynamic": "^6.0.3",
@@ -68,7 +70,8 @@
     "ngx-treeview": "^2.0.6",
     "ol": "4.6.3",
     "primeng": "^6.1.4",
-    "proj4": "2.4.3",
+    "proj4": "^2.5.0",
+    "gl-matrix": "^2.8.1",
     "rison": "0.1.1",
     "rxjs": "^6.2.1",
     "togeojson": "^0.16.0",
