37 component add api's for new integration (#2018)
* communicator adding method setPositionByCenterAndRadius()

* Add action + api support for SET_MAP_POSITION

* Add action + api support for SET_MAP_POSITION_BY_RADIUS

* Adding api support for setOverlaysCriteria()

* Bumping npm version, before publish

* 1 Adding dependency (cesium) to plugins module (cesium was missing in component implementation)
2 Bump npm version

* 1 Adding dependency (angular/material) to plugins module (was missing in component implementation)
2 Bump npm version

* Readding Sandbox menu item..

* Removing old Sandbox, using new Sendbox..

* Adding testing content to sendbox

* API check: setMapPositionByRadius works!

* API check: setMapPositionByRect works!

* API check: 1 setOverlaysCriteria works
2 setMapPositionByRadius was added a boolean parameter: search
3 bump npm version before publishing

* tweak

* Adding guard check for communicator, also unit tests

* 1 Removing "fit" by Yair from 301218
2 Fixing unit test

* Rename 'sendbox' to 'sandbox'

* Using EMPTY instead of of(null)...

--- a/src/app/@ansyn/plugins/package.json
+++ b/src/app/@ansyn/plugins/package.json
@@ -1,26 +1,27 @@
 {
 	"name": "@ansyn/plugins",
-	"version": "0.2.85",
+	"version": "0.2.89",
 	"peerDependencies": {
 		"@angular/common": "^6.0.3",
 		"@angular/core": "^6.0.3"
 	},
 	"dependencies": {
-		"@ansyn/core": "0.2.85",
+		"@ansyn/core": "0.2.89",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^6.0.1",
 		"@ngrx/effects": "^6.0.1",
 		"@turf/turf": "5.1.6",
 		"lodash": "4.17.5",
 		"ol": "4.6.3",
-		"@ansyn/status-bar": "0.2.85",
-		"@ansyn/overlays": "0.2.85",
-		"@ansyn/menu-items": "0.2.85",
-		"@ansyn/map-facade": "0.2.85",
-		"@ansyn/imagery": "0.2.85",
-		"@ansyn/context": "0.2.85",
+		"@ansyn/status-bar": "0.2.89",
+		"@ansyn/overlays": "0.2.89",
+		"@ansyn/menu-items": "0.2.89",
+		"@ansyn/map-facade": "0.2.89",
+		"@ansyn/imagery": "0.2.89",
+		"@ansyn/context": "0.2.89",
 		"angular2-uuid": "1.1.1",
-		"auto-subscriptions": "^1.0.3"
+		"auto-subscriptions": "^1.0.3",
+		"cesium": "^1.52.0"
 	},
 	"license": "MIT"
 }
