--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "build:aot": "ng build --aot true",
     "build:builder": "ng build builder",
     "build:gulp": "cd build && gulp build",
-    "build:prod": "ng build ansyn --prod",
+    "build:prod": "node --max_old_space_size=8192 node_modules/@angular/cli/bin/ng build ansyn --prod",
     "build:libs": "bash scripts/build-libs.sh",
     "publish:libs": "bash scripts/publish-libs.sh",
     "docker:elastic": "docker run -p 9200:9200 -v  /esdata1:/usr/share/elasticsearch/data -e \"http.host=0.0.0.0\" -e \"transport.host=127.0.0.1\" -e \"http.cors.enabled=true\" -e \"http.cors.allow-origin=/.*/\" -e \"http.cors.allow-credentials=true\" -e \"http.cors.allow-headers=X-Requested-With, Content-Type, Content-Length, Authorization\" docker.elastic.co/elasticsearch/elasticsearch:5.4.3",
