--- a/package.json
+++ b/package.json
@@ -31,17 +31,17 @@
     "testCompile": "cd build && gulp testCompile"
   },
   "dependencies": {
-    "@angular/animations": "^6.0.3",
+    "@angular/animations": "^7.2.2",
     "@angular/cdk": "^6.4.1",
-    "@angular/common": "^6.0.3",
-    "@angular/compiler": "^6.0.3",
-    "@angular/core": "^6.0.3",
-    "@angular/forms": "^6.0.3",
-    "@angular/http": "^6.0.3",
+    "@angular/common": "^7.2.2",
+    "@angular/compiler": "^7.2.2",
+    "@angular/core": "^7.2.2",
+    "@angular/forms": "^7.2.2",
+    "@angular/http": "^7.2.2",
     "@angular/material": "^6.4.1",
-    "@angular/platform-browser": "^6.0.3",
-    "@angular/platform-browser-dynamic": "^6.0.3",
-    "@angular/router": "^6.0.3",
+    "@angular/platform-browser": "^7.2.2",
+    "@angular/platform-browser-dynamic": "^7.2.2",
+    "@angular/router": "^7.2.2",
     "@ansyn/event-drops": "0.2.81.7",
     "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/core": "^1.2.0",
@@ -70,27 +70,23 @@
     "moment": "^2.21.0",
     "ng-infinitescroll": "1.0.12",
     "ngx-bootstrap": "^2.0.4",
-    "ngx-treeview": "^2.0.6",
+    "ngx-treeview": "^2.0.7",
     "ol": "4.6.3",
     "primeng": "^6.1.4",
     "proj4": "^2.5.0",
     "rison": "0.1.1",
-    "rxjs": "^6.2.1",
+    "rxjs": "^6.3.3",
     "togeojson": "^0.16.0",
     "tokml": "^0.4.0",
     "wellknown": "0.5.0",
-    "zone.js": "^0.8.26"
+    "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular/compiler-cli": "^6.0.3",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
     "@angular-devkit/build-angular": "~0.6.8",
-    "ng-packagr": "^3.0.0-rc.2",
-    "tsickle": ">=0.25.5",
-    "tslib": "^1.7.1",
-    "typescript": "~2.7.2",
-    "@angular/cli": "~6.0.8",
-    "@angular/language-service": "^6.0.3",
+    "@angular-devkit/build-ng-packagr": "~0.6.8",
+    "@angular/cli": "~7.2.3",
+    "@angular/compiler-cli": "^7.2.2",
+    "@angular/language-service": "^7.2.2",
     "@types/auth0-js": "^8.11.5",
     "@types/d3": "^4.13.0",
     "@types/file-saver": "^1.3.0",
@@ -127,12 +123,16 @@
     "karma-coverage-istanbul-reporter": "~2.0.0",
     "karma-jasmine": "~1.1.1",
     "karma-jasmine-html-reporter": "^0.2.2",
+    "ng-packagr": "^3.0.0-rc.2",
     "pre-commit": "1.2.2",
     "protractor": "~5.3.0",
     "protractor-screenshoter-plugin": "^0.5.0",
     "replace": "0.3.0",
     "ts-node": "~5.0.1",
-    "tslint": "~5.9.1"
+    "tsickle": "^0.34.0",
+    "tslib": "^1.7.1",
+    "tslint": "~5.9.1",
+    "typescript": "~3.2.4"
   },
   "precommit": [
     "fix-all"
