--- a/package.json
+++ b/package.json
@@ -81,8 +81,8 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.6.8",
-    "@angular-devkit/build-ng-packagr": "~0.6.8",
+    "@angular-devkit/build-angular": "^0.12.3",
+    "@angular-devkit/build-ng-packagr": "^0.12.3",
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "^7.2.2",
     "@angular/language-service": "^7.2.2",
@@ -111,15 +111,15 @@
     "gulp-replace": "^0.6.1",
     "gulp-sequence": "^1.0.0",
     "gulp-shell": "^0.6.3",
-    "jasmine-core": "~2.99.1",
-    "jasmine-marbles": "0.3.1",
-    "jasmine-spec-reporter": "~4.2.1",
+    "jasmine-core": "^3.3.0",
+    "jasmine-marbles": "^0.4.1",
+    "jasmine-spec-reporter": "^4.2.1",
     "jsdoc": "3.5.5",
-    "karma": "^3.1.3",
-    "karma-chrome-launcher": "~2.2.0",
-    "karma-coverage-istanbul-reporter": "~2.0.0",
-    "karma-jasmine": "~1.1.1",
-    "karma-jasmine-html-reporter": "^0.2.2",
+    "karma": "^4.0.0",
+    "karma-chrome-launcher": "^2.2.0",
+    "karma-coverage-istanbul-reporter": "^2.0.4",
+    "karma-jasmine": "^2.0.1",
+    "karma-jasmine-html-reporter": "^1.4.0",
     "ng-packagr": "^3.0.0-rc.2",
     "pre-commit": "1.2.2",
     "protractor": "^5.4.1",
