--- a/src/app/@ansyn/overlays/package.json
+++ b/src/app/@ansyn/overlays/package.json
@@ -2,17 +2,17 @@
 	"name": "@ansyn/overlays",
 	"version": "0.2.93",
 	"peerDependencies": {
-		"@angular/common": "^6.0.3",
-		"@angular/core": "^6.0.3"
+		"@angular/common": "^7.2.2",
+		"@angular/core": "^7.2.2"
 	},
 	"dependencies": {
 		"@ansyn/core": "0.2.93",
 		"@ngrx/core": "^1.2.0",
-		"@ngrx/store": "^6.0.1",
-		"@ngrx/effects": "^6.0.1",
+		"@ngrx/store": "^7.2.0",
+		"@ngrx/effects": "^7.2.0",
 		"@turf/turf": "5.1.6",
 		"lodash": "4.17.5",
-		"@ansyn/event-drops": "0.2.8-1.7",
+		"@ansyn/event-drops": "0.2.81.7",
 		"@ngx-translate/core": "^10.0.2",
 		"auto-subscriptions": "^1.0.3",
 		"d3": "^4.13.0"
