--- a/package.json
+++ b/package.json
@@ -69,7 +69,8 @@
     "mathjs": "^5.4.1",
     "moment": "^2.21.0",
     "ngx-bootstrap": "^2.0.4",
-    "ngx-treeview": "^2.0.7",
+    "ngx-treeview": "^6.0.2",
+    "npm": "^6.8.0",
     "ol": "^5.3.0",
     "primeng": "^6.1.4",
     "proj4": "^2.5.0",
