--- a/src/app/@ansyn/context/package.json
+++ b/src/app/@ansyn/context/package.json
@@ -1,15 +1,13 @@
 {
 	"name": "@ansyn/context",
-	"version": "0.2.96",
+	"version": "0.2.97",
 	"peerDependencies": {
-		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2"
-	},
-	"dependencies": {
-		"@ansyn/core": "0.2.96",
+		"@ansyn/core": "0.2.97",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/entity": "^7.2.0"
+		"@ngrx/entity": "^7.2.0",
+		"@angular/common": "^7.2.2",
+		"@angular/core": "^7.2.2"
 	},
 	"license": "MIT"
 }
