--- a/src/app/@ansyn/menu/package.json
+++ b/src/app/@ansyn/menu/package.json
@@ -1,14 +1,14 @@
 {
 	"name": "@ansyn/menu",
-	"version": "0.2.96",
+	"version": "0.2.97",
 	"peerDependencies": {
 		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2"
-	},
-	"dependencies": {
+		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/entity": "^7.2.0",
+		"@ngrx/entity": "^7.2.0"
+	},
+	"dependencies": {
 		"auto-subscriptions": "^1.0.3"
 	},
 	"license": "MIT"
