--- a/src/app/@ansyn/plugins/package.json
+++ b/src/app/@ansyn/plugins/package.json
@@ -1,24 +1,24 @@
 {
 	"name": "@ansyn/plugins",
-	"version": "0.2.96",
+	"version": "0.2.97",
 	"peerDependencies": {
 		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2"
-	},
-	"dependencies": {
-		"@ansyn/core": "0.2.96",
+		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/effects": "^7.2.0",
+		"@ngrx/effects": "^7.2.0"
+	},
+	"dependencies": {
+		"@ansyn/core": "0.2.97",
 		"@turf/turf": "5.1.6",
 		"lodash": "4.17.5",
 		"ol": "^5.3.0",
-		"@ansyn/status-bar": "0.2.96",
-		"@ansyn/overlays": "0.2.96",
-		"@ansyn/menu-items": "0.2.96",
-		"@ansyn/map-facade": "0.2.96",
-		"@ansyn/imagery": "0.2.96",
-		"@ansyn/context": "0.2.96",
+		"@ansyn/status-bar": "0.2.97",
+		"@ansyn/overlays": "0.2.97",
+		"@ansyn/menu-items": "0.2.97",
+		"@ansyn/map-facade": "0.2.97",
+		"@ansyn/imagery": "0.2.97",
+		"@ansyn/context": "0.2.97",
 		"angular2-uuid": "1.1.1",
 		"auto-subscriptions": "^1.0.3",
 		"cesium": "^1.52.0"
