--- a/src/app/@ansyn/status-bar/package.json
+++ b/src/app/@ansyn/status-bar/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "@ansyn/status-bar",
-	"version": "0.2.96",
+	"version": "0.2.97",
 	"peerDependencies": {
 		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2"
-	},
-	"dependencies": {
-		"@ansyn/core": "0.2.96",
+		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/effects": "^7.2.0",
+		"@ngrx/effects": "^7.2.0"
+	},
+	"dependencies": {
+		"@ansyn/core": "0.2.97",
 		"lodash": "4.17.5",
 		"@ngx-translate/core": "^10.0.2",
 		"flatpickr": "4.1.2",
