--- a/src/app/@ansyn/status-bar/package.json
+++ b/src/app/@ansyn/status-bar/package.json
@@ -1,19 +1,19 @@
 {
 	"name": "@ansyn/status-bar",
-	"version": "0.2.97",
+	"version": "0.2.98",
 	"peerDependencies": {
 		"@angular/common": "^7.2.2",
 		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/effects": "^7.2.0"
+		"@ngrx/effects": "^7.2.0",
+		"ngx-treeview": "^6.0.2"
 	},
 	"dependencies": {
-		"@ansyn/core": "0.2.97",
+		"@ansyn/core": "0.2.98",
 		"lodash": "4.17.5",
 		"@ngx-translate/core": "^10.0.2",
-		"flatpickr": "4.1.2",
-		"ngx-treeview": "^6.0.2"
+		"flatpickr": "4.1.2"
 	},
 	"license": "MIT"
 }
