--- a/src/app/@ansyn/menu-items/package.json
+++ b/src/app/@ansyn/menu-items/package.json
@@ -1,24 +1,24 @@
 {
 	"name": "@ansyn/menu-items",
-	"version": "0.2.98",
+	"version": "0.2.99",
 	"peerDependencies": {
 		"@angular/common": "^7.2.2",
 		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/effects": "^7.2.0"
+		"@ngrx/effects": "^7.2.0",
+		"@ngrx/entity": "^7.2.0"
 	},
 	"dependencies": {
-		"@ansyn/core": "0.2.98",
+		"@ansyn/core": "0.2.99",
 		"@turf/turf": "5.1.6",
 		"lodash": "4.17.5",
 		"moment": "^2.21.0",
 		"wellknown": "0.5.0",
-		"@ansyn/menu": "0.2.98",
-		"@ansyn/context": "0.2.98",
-		"@ansyn/map-facade": "0.2.98",
-		"@ansyn/overlays": "0.2.98",
-		"@ngrx/entity": "^7.2.0",
+		"@ansyn/menu": "0.2.99",
+		"@ansyn/context": "0.2.99",
+		"@ansyn/map-facade": "0.2.99",
+		"@ansyn/overlays": "0.2.99",
 		"@ngx-translate/core": "^10.0.2",
 		"angular2-uuid": "1.1.1",
 		"auto-subscriptions": "^1.0.3",
