--- a/src/app/@ansyn/map-facade/package.json
+++ b/src/app/@ansyn/map-facade/package.json
@@ -1,18 +1,18 @@
 {
 	"name": "@ansyn/map-facade",
-	"version": "0.2.95",
+	"version": "0.2.99",
 	"peerDependencies": {
 		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2"
-	},
-	"dependencies": {
-		"@ansyn/core": "0.2.95",
+		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/effects": "^7.2.0",
+		"@ngrx/effects": "^7.2.0"
+	},
+	"dependencies": {
+		"@ansyn/core": "0.2.99",
 		"@turf/turf": "5.1.6",
 		"lodash": "4.17.5",
-		"@ansyn/imagery": "0.2.95",
+		"@ansyn/imagery": "0.2.99",
 		"@ngx-translate/core": "^10.0.2",
 		"angular2-uuid": "1.1.1",
 		"auto-subscriptions": "^1.0.3"
