--- a/src/app/@ansyn/overlays/package.json
+++ b/src/app/@ansyn/overlays/package.json
@@ -1,15 +1,15 @@
 {
 	"name": "@ansyn/overlays",
-	"version": "0.2.95",
+	"version": "0.2.99",
 	"peerDependencies": {
 		"@angular/common": "^7.2.2",
-		"@angular/core": "^7.2.2"
-	},
-	"dependencies": {
-		"@ansyn/core": "0.2.95",
+		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/effects": "^7.2.0",
+		"@ngrx/effects": "^7.2.0"
+	},
+	"dependencies": {
+		"@ansyn/core": "0.2.99",
 		"@turf/turf": "5.1.6",
 		"lodash": "4.17.5",
 		"@ansyn/event-drops": "0.2.81.7",
