Add airbusds provider (#163)
* starting point airbus provider

* airbus provider done

* change baseurl var

* add to toml

* fixing travis

* move AIRBUS to map source

--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -22,5 +22,6 @@ keys = [
 	"/ansyn/imisight/callback/url",
 	"/ansyn/overlay/imisight/inactive",
 	"/ansyn/overlay/tb/inactive",
+	"/ansyn/airbus/proxy/baseurl",
 	"/ansyn/tb/baseurl"
 ]
