--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -23,5 +23,6 @@ keys = [
 	"/ansyn/overlay/imisight/inactive",
 	"/ansyn/overlay/tb/inactive",
 	"/ansyn/airbus/proxy/baseurl",
-	"/ansyn/tb/baseurl"
+	"/ansyn/tb/baseurl",
+	"/ansyn/overlay/airbus/inactive"
 ]
