--- a/.travis.yml
+++ b/.travis.yml
@@ -29,11 +29,13 @@ before_script:
   #- apt-get install graphicsmagick # for e2e screenshots
 
 script:
+  - npm run lint
+  - npm run test:single-run
   - sh -x scripts/build.sh ansyn $TRAVIS_COMMIT $TRAVIS_TAG
 
 cache:
   directories:
-     - ./node_modules
+    - ./node_modules
 
 before_deploy:
   - docker --version
