--- a/src/app/@ansyn/plugins/package.json
+++ b/src/app/@ansyn/plugins/package.json
@@ -21,7 +21,7 @@
 		"@ansyn/context": "0.3.21",
 		"angular2-uuid": "1.1.1",
 		"auto-subscriptions": "^1.0.3",
-		"cesium": "file:cesium-1.53.0-imagery-reprojection-and-mosaics30198.tgz"
+		"cesium": "^1.52.0"
 	},
 	"license": "MIT"
 }
