--- a/src/app/@ansyn/assets/package.json
+++ b/src/app/@ansyn/assets/package.json
@@ -1,10 +1,12 @@
 {
 	"name": "@ansyn/assets",
-	"version": "0.3.21",
+	"version": "0.3.22",
 	"license": "MIT",
+	"peerDependencies": {
+		"ol": "^5.3.0"
+	},
 	"dependencies": {
 		"@ansyn/event-drops": "0.2.81.9",
-		"ol": "^5.3.0",
 		"primeng": "^6.1.4",
 		"flatpickr": "4.1.2",
 		"font-awesome": "^4.7.0"
