--- a/src/app/@ansyn/overlays/package.json
+++ b/src/app/@ansyn/overlays/package.json
@@ -2,20 +2,20 @@
 	"name": "@ansyn/overlays",
 	"version": "0.3.22",
 	"peerDependencies": {
+		"@ansyn/core": "0.3.22",
 		"@angular/common": "^7.2.2",
 		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/effects": "^7.2.0"
+		"@ngrx/effects": "^7.2.0",
+		"d3": "^4.13.0"
 	},
 	"dependencies": {
-		"@ansyn/core": "0.3.22",
 		"@turf/turf": "5.1.6",
 		"lodash": "4.17.5",
 		"@ansyn/event-drops": "0.2.81.9",
 		"@ngx-translate/core": "^10.0.2",
-		"auto-subscriptions": "^1.0.3",
-		"d3": "^4.13.0"
+		"auto-subscriptions": "^1.0.3"
 	},
 	"license": "MIT"
 }
