--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -23,11 +23,11 @@
 		"@ansyn/overlays": "0.3.22",
 		"@ansyn/plugins": "0.3.22",
 		"@ansyn/status-bar": "0.3.22",
-		"@turf/turf": "5.1.6",
+		"@turf/turf": "^5.1.6",
 		"geojson": "^0.5.0",
-		"lodash": "4.17.5",
+		"lodash": "^4.17.5",
 		"moment": "^2.21.0",
-		"wellknown": "0.5.0"
+		"wellknown": "^0.5.0"
 	},
 	"license": "MIT"
 }
