--- a/src/app/@ansyn/core/package.json
+++ b/src/app/@ansyn/core/package.json
@@ -16,11 +16,11 @@
 		"@angular/core": "^7.2.2"
 	},
 	"dependencies": {
-		"@turf/turf": "5.1.6",
-		"lodash": "4.17.5",
+		"@turf/turf": "^5.1.6",
+		"lodash": "^4.17.5",
 		"@ngx-translate/core": "^10.0.2",
-		"angular2-uuid": "1.1.1",
+		"angular2-uuid": "^1.1.1",
 		"auto-subscriptions": "^1.0.3",
-		"lodash-decorators": "4.5.0"
+		"lodash-decorators": "^4.5.0"
 	}
 }
