--- a/src/app/@ansyn/menu-items/package.json
+++ b/src/app/@ansyn/menu-items/package.json
@@ -11,22 +11,22 @@
 		"@ngrx/entity": "^7.2.0"
 	},
 	"dependencies": {
-		"@turf/turf": "5.1.6",
-		"lodash": "4.17.5",
+		"@turf/turf": "^5.1.6",
+		"lodash": "^4.17.5",
 		"moment": "^2.21.0",
-		"wellknown": "0.5.0",
+		"wellknown": "^0.5.0",
 		"@ansyn/menu": "0.3.22",
 		"@ansyn/context": "0.3.22",
 		"@ansyn/map-facade": "0.3.22",
 		"@ansyn/overlays": "0.3.22",
 		"@ngx-translate/core": "^10.0.2",
-		"angular2-uuid": "1.1.1",
+		"angular2-uuid": "^1.1.1",
 		"auto-subscriptions": "^1.0.3",
 		"file-saver": "^1.3.8",
 		"ngx-bootstrap": "^2.0.4",
 		"primeng": "^6.1.4",
 		"proj4": "^2.5.0",
-		"rison": "0.1.1",
+		"rison": "^0.1.1",
 		"togeojson": "^0.16.0",
 		"tokml": "^0.4.0"
 	},
