--- a/src/app/@ansyn/status-bar/package.json
+++ b/src/app/@ansyn/status-bar/package.json
@@ -11,9 +11,9 @@
 		"ngx-treeview": "^6.0.2"
 	},
 	"dependencies": {
-		"lodash": "4.17.5",
+		"lodash": "^4.17.5",
 		"@ngx-translate/core": "^10.0.2",
-		"flatpickr": "4.1.2"
+		"flatpickr": "^4.1.2"
 	},
 	"license": "MIT"
 }
