--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ansyn-src",
-  "version": "0.3.21",
+  "version": "0.3.22",
   "private": true,
   "license": "MIT",
   "repository": {
@@ -42,7 +42,7 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
-    "@ansyn/event-drops": "0.2.81.9",
+    "@ansyn/event-drops": "^0.2.81.9",
     "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^7.2.0",
@@ -50,8 +50,8 @@
     "@ngrx/store": "^7.2.0",
     "@ngrx/store-devtools": "^7.2.0",
     "@ngx-translate/core": "^10.0.2",
-    "@turf/turf": "5.1.6",
-    "angular2-uuid": "1.1.1",
+    "@turf/turf": "^5.1.6",
+    "angular2-uuid": "^1.1.1",
     "auth0-js": "^9.7.3",
     "auto-subscriptions": "^1.0.3",
     "cesium": "^1.52.0",
@@ -60,12 +60,12 @@
     "d3": "^4.13.0",
     "dltjs": "^0.1.1",
     "file-saver": "^1.3.8",
-    "flatpickr": "4.1.2",
+    "flatpickr": "^4.1.2",
     "font-awesome": "^4.7.0",
     "geojson": "^0.5.0",
     "gl-matrix": "^2.8.1",
-    "lodash": "4.17.5",
-    "lodash-decorators": "4.5.0",
+    "lodash": "^4.17.5",
+    "lodash-decorators": "^4.5.0",
     "mathjs": "^5.4.1",
     "moment": "^2.21.0",
     "ngx-bootstrap": "^2.0.4",
@@ -73,11 +73,11 @@
     "ol": "^5.3.0",
     "primeng": "^6.1.4",
     "proj4": "^2.5.0",
-    "rison": "0.1.1",
+    "rison": "^0.1.1",
     "rxjs": "^6.4.0",
     "togeojson": "^0.16.0",
     "tokml": "^0.4.0",
-    "wellknown": "0.5.0",
+    "wellknown": "^0.5.0",
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
