--- a/src/app/@ansyn/map-facade/package.json
+++ b/src/app/@ansyn/map-facade/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "@ansyn/map-facade",
-	"version": "0.3.21",
+	"version": "0.3.22",
 	"peerDependencies": {
+		"@ansyn/core": "0.3.22",
 		"@angular/common": "^7.2.2",
 		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
@@ -9,12 +10,11 @@
 		"@ngrx/effects": "^7.2.0"
 	},
 	"dependencies": {
-		"@ansyn/core": "0.3.21",
-		"@turf/turf": "5.1.6",
-		"lodash": "4.17.5",
-		"@ansyn/imagery": "0.3.21",
+		"@turf/turf": "^5.1.6",
+		"lodash": "^4.17.5",
+		"@ansyn/imagery": "0.3.22",
 		"@ngx-translate/core": "^10.0.2",
-		"angular2-uuid": "1.1.1",
+		"angular2-uuid": "^1.1.1",
 		"auto-subscriptions": "^1.0.3"
 	},
 	"license": "MIT"
