--- a/src/app/@ansyn/status-bar/package.json
+++ b/src/app/@ansyn/status-bar/package.json
@@ -1,7 +1,8 @@
 {
 	"name": "@ansyn/status-bar",
-	"version": "0.3.21",
+	"version": "0.3.22",
 	"peerDependencies": {
+		"@ansyn/core": "0.3.22",
 		"@angular/common": "^7.2.2",
 		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
@@ -10,10 +11,9 @@
 		"ngx-treeview": "^6.0.2"
 	},
 	"dependencies": {
-		"@ansyn/core": "0.3.21",
-		"lodash": "4.17.5",
+		"lodash": "^4.17.5",
 		"@ngx-translate/core": "^10.0.2",
-		"flatpickr": "4.1.2"
+		"flatpickr": "^4.1.2"
 	},
 	"license": "MIT"
 }
