--- a/package.json
+++ b/package.json
@@ -42,7 +42,7 @@
     "@angular/platform-browser": "^7.2.2",
     "@angular/platform-browser-dynamic": "^7.2.2",
     "@angular/router": "^7.2.2",
-    "@ansyn/event-drops": "^0.2.81.9",
+    "@ansyn/event-drops": "^0.2.8-1.9",
     "@auth0/angular-jwt": "^2.0.0",
     "@ngrx/core": "^1.2.0",
     "@ngrx/effects": "^7.2.0",
@@ -64,7 +64,7 @@
     "font-awesome": "^4.7.0",
     "geojson": "^0.5.0",
     "gl-matrix": "^2.8.1",
-    "lodash": "^4.17.5",
+    "lodash": "^4.17.11",
     "lodash-decorators": "^4.5.0",
     "mathjs": "^5.4.1",
     "moment": "^2.21.0",
@@ -81,10 +81,10 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.12.3",
+    "@angular-devkit/build-angular": "^0.13.6",
     "@angular-devkit/build-ng-packagr": "^0.12.3",
     "@angular/cli": "~7.2.3",
-    "@angular/compiler-cli": "^7.2.2",
+    "@angular/compiler-cli": "^7.2.10",
     "@angular/language-service": "^7.2.2",
     "@types/auth0-js": "^8.11.5",
     "@types/d3": "^4.13.1",
@@ -110,17 +110,17 @@
     "gulp-rename": "^1.2.2",
     "gulp-replace": "^0.6.1",
     "gulp-sequence": "^1.0.0",
-    "gulp-shell": "^0.6.3",
+    "gulp-shell": "^0.7.0",
     "jasmine-core": "^3.3.0",
     "jasmine-marbles": "^0.4.1",
     "jasmine-spec-reporter": "^4.2.1",
     "jsdoc": "3.5.5",
-    "karma": "^4.0.0",
+    "karma": "^4.0.1",
     "karma-chrome-launcher": "^2.2.0",
     "karma-coverage-istanbul-reporter": "^2.0.4",
     "karma-jasmine": "^2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
-    "ng-packagr": "^3.0.0-rc.2",
+    "ng-packagr": "^4.7.1",
     "pre-commit": "1.2.2",
     "protractor": "^5.4.1",
     "protractor-screenshoter-plugin": "^0.5.0",
