--- a/src/app/@ansyn/assets/package.json
+++ b/src/app/@ansyn/assets/package.json
@@ -6,7 +6,7 @@
 		"ol": "^5.3.0"
 	},
 	"dependencies": {
-		"@ansyn/event-drops": "^0.2.81.9",
+		"@ansyn/event-drops": "^0.2.8-1.9",
 		"primeng": "^6.1.4",
 		"flatpickr": "^4.1.2",
 		"font-awesome": "^4.7.0"
