--- a/src/app/@ansyn/overlays/package.json
+++ b/src/app/@ansyn/overlays/package.json
@@ -12,8 +12,8 @@
 	},
 	"dependencies": {
 		"@turf/turf": "^5.1.6",
-		"lodash": "^4.17.5",
-		"@ansyn/event-drops": "^0.2.81.9",
+		"lodash": "^4.17.11",
+		"@ansyn/event-drops": "^0.2.8-1.9",
 		"@ngx-translate/core": "^10.0.2",
 		"auto-subscriptions": "^1.0.3"
 	},
