--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -21,5 +21,7 @@ keys = [
 	"/ansyn/overlay/idaho/inactive",
 	"/ansyn/imisight/callback/url",
 	"/ansyn/overlay/imisight/inactive",
-	"/ansyn/overlay/tb/inactive"
+	"/ansyn/overlay/tb/inactive",
+	"/ansyn/overlay/sentinel/inactive",
+	"/ansyn/sentinel/baseurl"
 ]
