--- a/src/app/@ansyn/ansyn/tsconfig.lib.json
+++ b/src/app/@ansyn/ansyn/tsconfig.lib.json
@@ -13,6 +13,9 @@
       ],
       "@ansyn/imagery": [
         "dist/ansyn/imagery"
+      ],
+      "@ansyn/ol": [
+        "dist/ansyn/ol"
       ]
     },
     "outDir": "../../../out-tsc/lib",
