--- a/src/app/@ansyn/ol/package.json
+++ b/src/app/@ansyn/ol/package.json
@@ -4,9 +4,13 @@
 	"peerDependencies": {
 		"@angular/core": "^7.2.2",
 		"@angular/common": "^7.2.2",
-		"ol": "^5.3.0",
 		"@ansyn/imagery": "0.3.27",
 		"rxjs": "^6.4.0"
+	},
+	"dependencies": {
+		"auto-subscriptions": "^1.0.3",
+		"@turf/turf": "^5.1.6",
+		"ol": "^5.3.0"
 	},
 	"license": "MIT"
 }
