--- a/src/app/@ansyn/imagery/package.json
+++ b/src/app/@ansyn/imagery/package.json
@@ -9,6 +9,7 @@
 		"@angular/core": "^7.2.2"
 	},
 	"dependencies": {
-		"auto-subscriptions": "^2.0.5"
+		"auto-subscriptions": "^2.0.5",
+		"@turf/turf": "^5.1.6"
 	}
 }
