--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "mathjs": "^5.4.1",
     "moment": "^2.21.0",
     "ngx-bootstrap": "^2.0.4",
+    "ngx-color-picker": "^7.5.0",
     "ngx-device-detector": "^1.3.5",
     "ngx-treeview": "^6.0.2",
     "ol": "^5.3.0",
@@ -82,7 +83,7 @@
     "zone.js": "^0.8.29"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.13.6",
+    "@angular-devkit/build-angular": "^0.13.8",
     "@angular-devkit/build-ng-packagr": "^0.12.3",
     "@angular/cli": "~7.2.3",
     "@angular/compiler-cli": "^7.2.10",
