--- a/src/app/@ansyn/ol/package.json
+++ b/src/app/@ansyn/ol/package.json
@@ -11,6 +11,7 @@
 		"auto-subscriptions": "^2.0.5",
 		"@turf/turf": "^5.1.6",
 		"ol": "^5.3.0",
+		"ngx-color-picker": "^7.5.0",
 		"angular2-uuid": "^1.1.1"
 	},
 	"license": "MIT"
