--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -19,7 +19,17 @@
 		"geojson": "^0.5.0",
 		"lodash": "^4.17.11",
 		"moment": "^2.21.0",
-		"wellknown": "^0.5.0"
+		"wellknown": "^0.5.0",
+		"flatpickr": "^4.5.7",
+		"font-awesome": "^4.7.0",
+		"primeng": "^6.1.4",
+		"file-saver": "^1.3.8",
+		"lodash-decorators": "^4.5.0",
+		"ngx-bootstrap": "^2.0.4",
+		"proj4": "^2.5.0",
+		"rison": "^0.1.1",
+		"togeojson": "^0.16.0",
+		"tokml": "^0.4.0"
 	},
 	"license": "MIT"
 }
