Config: adding an environment variable option for the horizontal and vertical collapse buttons

--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -23,5 +23,6 @@ keys = [
 	"/ansyn/overlay/imisight/inactive",
 	"/ansyn/overlay/tb/inactive",
 	"/ansyn/sentinel/baseurl",
-	"/ansyn/overlay/sentinel/inactive"
+	"/ansyn/overlay/sentinel/inactive",
+	"/ansyn/iscollapsible"
 ]
