--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -10,6 +10,7 @@
 		"@ansyn/imagery": "0.3.29",
 		"@ansyn/map-facade": "0.3.29",
 		"@ansyn/menu": "0.3.29",
+		"@ansyn/imagery-cesium": "0.3.29",
 		"ol": "^5.3.0",
 		"@angular/cdk": "^7.3.0",
 		"@angular/material": "^7.3.0"
