--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -16,6 +16,7 @@
 		"@angular/material": "^7.3.0"
 	},
 	"dependencies": {
+		"@ansyn/translation": "0.3.33",
 		"@turf/turf": "^5.1.6",
 		"geojson": "^0.5.0",
 		"lodash": "^4.17.11",
