--- a/src/app/@ansyn/map-facade/package.json
+++ b/src/app/@ansyn/map-facade/package.json
@@ -12,7 +12,7 @@
 	"dependencies": {
 		"@turf/turf": "^5.1.6",
 		"lodash": "^4.17.11",
-		"@ngx-translate/core": "^10.0.2",
+		"@ansyn/translation": "0.3.33",
 		"angular2-uuid": "^1.1.1",
 		"auto-subscriptions": "^2.0.5"
 	},
