--- a/src/app/@ansyn/menu/tsconfig.lib.json
+++ b/src/app/@ansyn/menu/tsconfig.lib.json
@@ -15,6 +15,9 @@
     "paths": {
       "@ansyn/menu": [
         "src/app/@ansyn/menu"
+      ],
+      "@ansyn/translation": [
+        "dist/ansyn/translation"
       ]
     }
   },
