--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -13,7 +13,8 @@
 		"@ansyn/imagery-cesium": "0.3.33",
 		"ol": "^5.3.0",
 		"@angular/cdk": "^7.3.0",
-		"@angular/material": "^7.3.0"
+		"@angular/material": "^7.3.0",
+		"@ngx-translate/core": "^10.0.2"
 	},
 	"dependencies": {
 		"@turf/turf": "^5.1.6",
