--- a/src/app/@ansyn/ol/package.json
+++ b/src/app/@ansyn/ol/package.json
@@ -5,7 +5,8 @@
 		"@angular/core": "^7.2.2",
 		"@angular/common": "^7.2.2",
 		"@ansyn/imagery": "0.3.33",
-		"rxjs": "^6.4.0"
+		"rxjs": "^6.4.0",
+		"@ngx-translate/core": "^10.0.2"
 	},
 	"dependencies": {
 		"auto-subscriptions": "^2.0.5",
