--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -1,19 +1,20 @@
 {
 	"name": "@ansyn/ansyn",
-	"version": "0.3.33",
+	"version": "0.3.34",
 	"peerDependencies": {
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
 		"@ngrx/effects": "^7.2.0",
 		"@angular/common": "^7.2.2",
 		"@angular/core": "^7.2.2",
-		"@ansyn/imagery": "0.3.33",
-		"@ansyn/map-facade": "0.3.33",
-		"@ansyn/menu": "0.3.33",
-		"@ansyn/imagery-cesium": "0.3.33",
+		"@ansyn/imagery": "0.3.34",
+		"@ansyn/map-facade": "0.3.34",
+		"@ansyn/menu": "0.3.34",
+		"@ansyn/imagery-cesium": "0.3.34",
 		"ol": "^5.3.0",
 		"@angular/cdk": "^7.3.0",
-		"@angular/material": "^7.3.0"
+		"@angular/material": "^7.3.0",
+		"@ngx-translate/core": "^10.0.2"
 	},
 	"dependencies": {
 		"@turf/turf": "^5.1.6",
