--- a/src/app/@ansyn/menu/package.json
+++ b/src/app/@ansyn/menu/package.json
@@ -1,12 +1,13 @@
 {
 	"name": "@ansyn/menu",
-	"version": "0.3.33",
+	"version": "0.3.34",
 	"peerDependencies": {
 		"@angular/common": "^7.2.2",
 		"@angular/core": "^7.2.2",
 		"@ngrx/core": "^1.2.0",
 		"@ngrx/store": "^7.2.0",
-		"@ngrx/entity": "^7.2.0"
+		"@ngrx/entity": "^7.2.0",
+		"@ngx-translate/core": "^10.0.2"
 	},
 	"dependencies": {
 		"auto-subscriptions": "^2.0.5"
