--- a/src/app/@ansyn/ol/package.json
+++ b/src/app/@ansyn/ol/package.json
@@ -1,11 +1,12 @@
 {
 	"name": "@ansyn/ol",
-	"version": "0.3.33",
+	"version": "0.3.34",
 	"peerDependencies": {
 		"@angular/core": "^7.2.2",
 		"@angular/common": "^7.2.2",
-		"@ansyn/imagery": "0.3.33",
-		"rxjs": "^6.4.0"
+		"@ansyn/imagery": "0.3.34",
+		"rxjs": "^6.4.0",
+		"@ngx-translate/core": "^10.0.2"
 	},
 	"dependencies": {
 		"auto-subscriptions": "^2.0.5",
