mouse shadow expose & ready event

--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -27,5 +27,6 @@ keys = [
 	"/ansyn/overlay/sentinel/inactive",
 	"/ansyn/iscollapsible",
 	"/ansyn/floation/position/suffix",
-	"/ansyn/is/shadow/active"
+	"/ansyn/is/shadow/active",
+	"/ansyn/always/send/position"
 ]
