add event when app ready (#2455)
* add event when app ready

* mouse shadow expose & ready event

* rename

--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -28,5 +28,6 @@ keys = [
 	"/ansyn/iscollapsible",
 	"/ansyn/floation/position/suffix",
 	"/ansyn/is/shadow/active",
-	"/ansyn/3d/enable"
+	"/ansyn/3d/enable",
+	"/ansyn/force/send/shadow/mouse/position"
 ]
