Add anaglyph sensor (#2549)
* working

* working with config

* fix cr

* fix cr change alertmsg to accept string add disable option

* fix tests

--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -31,5 +31,6 @@ keys = [
 	"/ansyn/is/shadow/active",
 	"/ansyn/3d/enable",
 	"/ansyn/force/send/shadow/mouse/position",
-	"/ansyn/angle/debug/mode"
+	"/ansyn/angle/debug/mode",
+	"/ansyn/anaglyph/sensornames"
 ]
