inactive imagery video

--- a/confd/conf.d/production.toml
+++ b/confd/conf.d/production.toml
@@ -38,4 +38,5 @@ keys = [
 	"/ansyn/logger/disconnection/minutes",
 	"/ansyn/airbus/baseurl",
     "/ansyn/overlay/airbus/inactive",
+    "/ansyn/overlay/imageryvideo/inactive"
 ]
