--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@angular/common": "~8.2.14",
     "@angular/compiler": "~8.2.14",
     "@angular/core": "~8.2.14",
+    "@angular/elements": "^8.2.14",
     "@angular/forms": "~8.2.14",
     "@angular/http": "^7.2.15",
     "@angular/material": "^8.2.3",
@@ -51,6 +52,7 @@
     "@ngrx/store-devtools": "^7.2.0",
     "@ngx-translate/core": "^10.0.2",
     "@turf/turf": "^5.1.6",
+    "@webcomponents/custom-elements": "^1.3.1",
     "angular2-uuid": "^1.1.1",
     "auth0-js": "^9.7.3",
     "auto-subscriptions": "^2.0.5",
@@ -59,6 +61,7 @@
     "crypto-js": "3.1.9-1",
     "d3": "^5.9.2",
     "dltjs": "^0.1.1",
+    "document-register-element": "^1.7.2",
     "file-saver": "^1.3.8",
     "flatpickr": "^4.5.7",
     "font-awesome": "^4.7.0",
