--- a/src/app/@ansyn/ansyn/package.json
+++ b/src/app/@ansyn/ansyn/package.json
@@ -11,6 +11,7 @@
 		"@ansyn/map-facade": "0.6.3",
 		"@ansyn/menu": "0.6.3",
 		"@ansyn/imagery-cesium": "0.6.3",
+		"@ansyn/imagery-video": "0.6.3",
 		"@ansyn/event-drops": "^0.2.8-1.9",
 		"ol": "^5.3.0",
 		"@angular/cdk": "^7.3.0",
