--- a/src/app/@ansyn/ansyn/tsconfig.json
+++ b/src/app/@ansyn/ansyn/tsconfig.json
@@ -14,6 +14,9 @@
       "@ansyn/imagery-cesium": [
         "src/app/@ansyn/imagery-cesium/public_api"
       ],
+      "@ansyn/imagery-video": [
+        "src/app/@ansyn/imagery-video/public_api"
+      ],
       "@ansyn/menu": [
         "src/app/@ansyn/menu/public_api"
       ]
