Revert angular.json

--- a/angular.json
+++ b/angular.json
@@ -304,7 +304,9 @@
             "styles": [
               "src/app/@ansyn/ansyn/assets/styles/styles.css"
             ],
-            "scripts": []
+            "scripts": [
+
+            ]
           },
           "configurations": {
             "dev": {
@@ -464,6 +466,26 @@
           "configurations": {
             "production": {
               "project": "src/app/@ansyn/imagery-cesium/ng-package.json"
+            }
+          }
+        }
+      }
+    },
+    "@ansyn/imagery-video": {
+      "root": "src/app/@ansyn/imagery-video",
+      "sourceRoot": "projects/ansyn/imagery-video/src",
+      "projectType": "library",
+      "prefix": "lib",
+      "architect": {
+        "build": {
+          "builder": "@angular-devkit/build-ng-packagr:build",
+          "options": {
+            "tsConfig": "src/app/@ansyn/imagery-video/tsconfig.lib.json",
+            "project": "src/app/@ansyn/imagery-video/ng-package.json"
+          },
+          "configurations": {
+            "production": {
+              "project": "src/app/@ansyn/imagery-video/ng-package.json"
             }
           }
         }
